@@ -1,6 +1,6 @@
 ## Process this file with automake to produce Makefile.in
 
-SUBDIRS = common login logout logs firstTime report
+SUBDIRS = ajax common login logout logs firstTime report
 
 templatedir = $(datadir)/ebox/templates
 template_DATA = backup.mas bug.mas confirm-backup.mas finish.mas general.mas \
