@@ -1,0 +1,10 @@
+## Process this file with automake to produce Makefile.in
+
+templatedir = $(datadir)/ebox/templates/ajax/viewer
+template_DATA = linkRSS.mas 
+
+EXTRA_DIST = $(template_DATA)
+
+MAINTAINERCLEANFILES = Makefile.in
+# List of files which contain translatable st
+
